--- a/BookingApi/BookingApi.csproj
+++ b/BookingApi/BookingApi.csproj
@@ -83,6 +83,8 @@
     </Compile>
     <Compile Include="HomeController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReservationRendition.cs" />
+    <Compile Include="ReservationsController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
